--- a/src/core/core.scss
+++ b/src/core/core.scss
@@ -8,29 +8,29 @@
 }
 
 @font-face {
-	font-family: "Inter";
-	src: url(../assets/fonts/Inter-Light.woff) format('woff');
+	font-family: "Poppins";
+	src: url(../assets/fonts/Poppins-Light.woff) format('woff');
 	font-style: normal;
 	font-weight: 200;
 	font-display: swap;
 }
 @font-face {
-	font-family: "Inter";
-	src: url(../assets/fonts/Inter-Regular.woff) format('woff');
+	font-family: "Poppins";
+	src: url(../assets/fonts/Poppins-Regular.woff) format('woff');
 	font-style: normal;
 	font-weight: 400;
 	font-display: swap;
 }
 @font-face {
-	font-family: "Inter";
-	src: url(../assets/fonts/Inter-Medium.woff) format('woff');
+	font-family: "Poppins";
+	src: url(../assets/fonts/Poppins-Medium.woff) format('woff');
 	font-style: normal;
 	font-weight: 600;
 	font-display: swap;
 }
 @font-face {
-	font-family: "Inter";
-	src: url(../assets/fonts/Inter-Bold.woff) format('woff');
+	font-family: "Poppins";
+	src: url(../assets/fonts/Poppins-Bold.woff) format('woff');
 	font-style: normal;
 	font-weight: 800;
 	font-display: swap;
